--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,7 +1,10 @@
 name: Sync to Hugging Face hub
 on:
   push:
-    branches: [main]
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 
   # to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -18,4 +21,4 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run:
-          git push https://thomas3737:$HF_TOKEN@huggingface.co/spaces/thomas3737/car_team main
+          git push https://thomas3737:$HF_TOKEN@huggingface.co/spaces/thomas3737/car_team main --force
