--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,7 +1,8 @@
 name: Sync to Hugging Face hub
 on:
   push:
-    branches: [ main ]
+    branches:
+      - '*'
   pull_request:
     branches: [ main ]
 
