feature(#13): fix a bug that git push is not working

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -28,6 +28,7 @@ jobs:
       - name: Install Hugging Face CLI
         run: |
           pip install hf-lfs
+          pip install huggingface_hub
       - name: Push to hub
         run: |
           echo "${{ secrets.HF_TOKEN }}" | huggingface-cli login
