bugfix(#13): add target branch in cd for huggingface sync

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -14,7 +14,8 @@ jobs:
         with:
           fetch-depth: 0
           lfs: true
-      - uses: nateraw/huggingface-sync-action@v0.0.5
+      - name: Sync with Hugging Face
+        uses: nateraw/huggingface-sync-action@v0.0.5
         with:
           github_repo_id: stackdev37/auto_cover_letter
           huggingface_repo_id: thomas3737/car_team
